[package]
name = "typewriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
lazy-regex = "3.3.0"
lazy_static = "1.5.0"
leptos = { version = "0.7.8", features = ["csr", "nightly"] }
leptos-use = "0.14.0"
maybe-owned = "0.3.4"
strum = { version = "0.27.1", features = ["derive"] }
